MDEV-439 cmake -DWITHOUT_SERVER does not work

fix mysys/waiting_threads.c to compile w/o performance schema
include clients. scripts and manpages in -DWITHOUT_SERVER